WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213434
REGRESSION(
r259219
): Sleep assertion remains active if WKWebView is closed or WebContent process crashes
https://bugs.webkit.org/show_bug.cgi?id=213434
Summary
REGRESSION(r259219): Sleep assertion remains active if WKWebView is closed or...
Jer Noble
Reported
2020-06-20 12:06:42 PDT
REGRESSION(
r259219
): Sleep assertion remains active if WKWebView is closed or WebContent process crashes
Attachments
Patch
(9.05 KB, patch)
2020-06-20 12:23 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(9.05 KB, patch)
2020-06-20 12:35 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2020-06-20 12:07:50 PDT
<
rdar://problem/57541662
>
Jer Noble
Comment 2
2020-06-20 12:23:31 PDT
Created
attachment 402398
[details]
Patch
Jer Noble
Comment 3
2020-06-20 12:35:04 PDT
Created
attachment 402399
[details]
Patch
Eric Carlson
Comment 4
2020-06-20 14:45:11 PDT
Comment on
attachment 402399
[details]
Patch Maybe check to be sure there is no sleep disabler at the beginning of each test to ensure that the one from the previous test was released?
Jer Noble
Comment 5
2020-06-20 18:09:53 PDT
(In reply to Eric Carlson from
comment #4
)
> Comment on
attachment 402399
[details]
> Patch > > Maybe check to be sure there is no sleep disabler at the beginning of each > test to ensure that the one from the previous test was released?
Querying for Sleep Disabling (for testing purposes at least) is per WKWebView, and we create a new WKWebView for every test. So this would be a no-op, I'm afraid.
EWS
Comment 6
2020-06-20 18:13:26 PDT
Committed
r263321
: <
https://trac.webkit.org/changeset/263321
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 402399
[details]
.
Chris Dumez
Comment 7
2020-07-07 16:26:30 PDT
Comment on
attachment 402399
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=402399&action=review
> Source/WebKit/UIProcess/WebProcessProxy.cpp:859 > + m_sleepDisablers.clear();
This seems redundant since processDidTerminateOrFailedToLaunch() calls shutDown().
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug