REGRESSION(r259219): Sleep assertion remains active if WKWebView is closed or WebContent process crashes https://bugs.webkit.org/show_bug.cgi?id=213434 <rdar://problem/57541662>

Reviewed by Eric Carlson.

Source/WebKit:

Tests: TestWebKitAPI tests:
    SleepDisabler.Basic
    SleepDisabler.Pause
    SleepDisabler.Mute
    SleepDisabler.Unmute
    SleepDisabler.DisableAudioTrack
    SleepDisabler.Loop
    SleepDisabler.ChangeSrc
    SleepDisabler.Load
    SleepDisabler.Unload
    SleepDisabler.Navigate
    SleepDisabler.NavigateBack
    SleepDisabler.Reload
    SleepDisabler.Close
    SleepDisabler.Crash

Ensure the SleepDisablers are cleared when the WebProcess closes or crashes.

* UIProcess/WebProcessProxy.cpp:
(WebKit::WebProcessProxy::shutDown):
(WebKit::WebProcessProxy::processDidTerminateOrFailedToLaunch):

Tools:

* TestWebKitAPI/Tests/WebKit/SleepDisabler.mm:
(SleepDisabler::loadPlayingPage):
(SleepDisabler::hasSleepDisablerShouldBecomeEqualTo):
(TEST_F):


Canonical link: https://commits.webkit.org/226227@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263321 268f45cc-cd09-0410-ab3c-d52691b4dbfc